--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         "php": ">=5.3.9",
         "ext-curl": "*",
         "ext-json": "*",
-        "guzzle/guzzle": "~3.8",
-        "symfony/http-foundation": "~2.3 || ~3.0"
+        "guzzlehttp/guzzle": "~3.0",
+        "symfony/http-foundation": "~2.3 || ~3.0 || ~4.0"
     },
     "require-dev": {
-      "phpunit/phpunit": "~4.0 || ~5.0",
-      "symfony/process": "~2.3 || ~3.0",
-      "friendsofphp/php-cs-fixer": "~1.10",
-      "mtdowling/burgomaster": "^0.0.2"
+      "phpunit/phpunit": "~4.0 || ~5.0 || ~6.0",
+      "symfony/process": "~2.3 || ~3.0 || ~4.0",
+      "friendsofphp/php-cs-fixer": "~2.10",
+      "mtdowling/burgomaster": "^0.0.3"
     },
     "autoload": {
         "psr-4": {
